Quick upload of changes

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 /*
  * Fonts
  */
-@import url('https://fonts.googleapis.com/css?family=Lato:300,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Noto+Serif:700');
 @import url("https://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css");
 
 /*
@@ -14,3 +14,4 @@
  * Custom styles
  */
 @import "particles/common.scss";
+@import "particles/sloped-edges.scss";
